# worky

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
crates/worky-cli/: Cargo.toml
crates/worky-cli/src/: commands.rs  interactive.rs  main.rs  output.rs
crates/worky-cli/src/board/: html.rs  mod.rs
crates/worky-cli/src/mcp/: mod.rs  protocol.rs  tools.rs
crates/worky-core/: Cargo.toml
crates/worky-core/src/: error.rs  event.rs  item.rs  lib.rs  patch.rs
crates/worky-fs/: Cargo.toml
crates/worky-fs/src/: config.rs  error.rs  lib.rs  workspace.rs
crates/worky-toolserver/: Cargo.toml
crates/worky-toolserver/src/: lib.rs
docs/: claude-code-setup.md  spec.md
examples/: workspace.sample.yml
