[package]
name = "worky-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain models and patch logic for worky"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
