[package]
name = "worky-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Filesystem backend for worky work item storage"

[lints]
workspace = true

[dependencies]
worky-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
walkdir.workspace = true
slug.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"
pretty_assertions = "1.4"
