[package]
name = "worky-toolserver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local HTTP tool server for Claude integration"

[lints]
workspace = true

[dependencies]
worky-core.workspace = true
worky-fs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
